--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "i18next": "19.0.2",
     "i18next-browser-languagedetector": "4.0.1",
     "i18next-xhr-backend": "3.2.2",
-    "jest": "24.9.0",
+    "prop-types": "^15.7.2",
     "react": "16.12.0",
     "react-chartjs-2": "2.8.0",
     "react-dom": "16.12.0",
@@ -20,12 +20,25 @@
     "react-scripts": "3.0.1",
     "react-toastify": "5.4.1",
     "react-tooltip": "3.11.1",
+    "reactotron-react-js": "^3.3.7",
     "socket.io-client": "2.3.0",
     "styled-components": "4.4.1",
     "sweetalert2": "9.5.3",
-    "sweetalert2-react-content": "2.0.2"
+    "sweetalert2-react-content": "2.0.2",
+    "yup": "^0.27.0"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.3",
+    "eslint": "^6.7.2",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-plugin-import": "^2.19.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react": "^7.17.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "eslint-plugin-simple-import-sort": "^5.0.0",
+    "prettier": "^1.19.1",
     "typescript": "3.3.3"
   },
   "scripts": {
@@ -34,5 +47,10 @@
     "test": "react-scripts test --env=jsdom jest",
     "eject": "react-scripts eject"
   },
-  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
