--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "3.8.0",
     "react-router-dom": "5.1.2",
     "react-scripts": "3.0.1",
+    "react-spring": "^8.0.27",
     "react-toastify": "5.4.1",
     "react-tooltip": "3.11.1",
     "reactotron-react-js": "^3.3.7",
