--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prop-types": "^15.7.2",
     "react": "16.12.0",
     "react-chartjs-2": "2.8.0",
+    "react-datepicker": "^2.10.1",
     "react-dom": "16.12.0",
     "react-i18next": "11.2.6",
     "react-icons": "3.8.0",
