--- a/package.json
+++ b/package.json
@@ -39,14 +39,17 @@
     "eslint-plugin-react-hooks": "^1.7.0",
     "eslint-plugin-simple-import-sort": "^5.0.0",
     "prettier": "^1.19.1",
+    "react-app-rewired": "^2.1.5",
     "typescript": "3.3.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom jest",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test --env=jsdom jest",
     "eject": "react-scripts eject"
   },
+  "config-overrides-path": "./config-overrides.js",
+  "jest": {},
   "browserslist": [
     ">0.2%",
     "not dead",
