--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "axios": "0.19.0",
     "chart.js": "2.9.3",
+    "date-fns": "^2.8.1",
     "i18next": "19.0.2",
     "i18next-browser-languagedetector": "4.0.1",
     "i18next-xhr-backend": "3.2.2",
