--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "@rocketseat/unform": "^1.6.1",
     "axios": "0.19.0",
     "chart.js": "2.9.3",
     "date-fns": "^2.8.1",
     "i18next": "19.0.2",
     "i18next-browser-languagedetector": "4.0.1",
     "i18next-xhr-backend": "3.2.2",
+    "polished": "^3.4.2",
     "prop-types": "^15.7.2",
     "react": "16.12.0",
     "react-chartjs-2": "2.8.0",
@@ -28,7 +30,7 @@
     "styled-components": "4.4.1",
     "sweetalert2": "9.5.3",
     "sweetalert2-react-content": "2.0.2",
-    "yup": "^0.27.0"
+    "yup": "^0.28.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
