--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "16.12.0",
     "react-i18next": "11.2.6",
     "react-icons": "3.8.0",
+    "react-particles-js": "^2.7.0",
     "react-router-dom": "5.1.2",
     "react-scripts": "3.0.1",
     "react-spring": "^8.0.27",
