--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@rocketseat/unform": "^1.6.1",
     "axios": "0.19.0",
     "chart.js": "2.9.3",
+    "dotenv": "^8.2.0",
     "date-fns": "^2.8.1",
     "history": "^4.10.1",
     "i18next": "19.0.2",
@@ -37,6 +38,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
+    "cross-env": "^6.0.3",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-import": "^2.19.1",
@@ -50,8 +52,8 @@
     "typescript": "3.3.3"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
+    "start": "cross-env NODE_ENV=test react-app-rewired start",
+    "build": "cross-env NODE_ENV=prod react-app-rewired build",
     "test": "react-app-rewired test --env=jsdom jest",
     "eject": "react-scripts eject"
   },
