--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "@rocketseat/unform": "^1.6.1",
     "axios": "0.19.0",
     "chart.js": "2.9.3",
-    "dotenv": "^8.2.0",
     "date-fns": "^2.8.1",
+    "dotenv": "^8.2.0",
     "history": "^4.10.1",
     "i18next": "19.0.2",
     "i18next-browser-languagedetector": "4.0.1",
@@ -38,6 +38,9 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
+    "@types/jest": "^24.0.24",
+    "axios-mock-adapter": "^1.17.0",
+    "babel-jest": "^24.9.0",
     "cross-env": "^6.0.3",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.7.0",
@@ -55,6 +58,7 @@
     "start": "cross-env NODE_ENV=test react-app-rewired start",
     "build": "cross-env NODE_ENV=prod react-app-rewired build",
     "test": "react-app-rewired test --env=jsdom jest",
+    "coverage": "react-app-rewired test --coverage --watchAll=false",
     "eject": "react-scripts eject"
   },
   "config-overrides-path": "./config-overrides.js",
@@ -62,9 +66,19 @@
     "testMatch": [
       "**/__tests__/**/*.test.js"
     ],
+    "setupFilesAfterEnv": [
+      "@testing-library/react/cleanup-after-each",
+      "@testing-library/jest-dom/extend-expect"
+    ],
     "moduleNameMapper": {
       "^~/(.*)": "<rootDir>/src/$1"
-    }
+    },
+    "collectCoverageFrom": [
+      "!scr/index.js",
+      "!src/services/api.js",
+      "!src/pages/_layouts/*"
+    ],
+    "coverageDirectory": "__tests__/coverage"
   },
   "browserslist": [
     ">0.2%",
