--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "0.19.0",
     "chart.js": "2.9.3",
     "date-fns": "^2.8.1",
+    "detect-browser": "^4.8.0",
     "dotenv": "^8.2.0",
     "history": "^4.10.1",
     "i18next": "19.0.2",
