--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "polished": "^3.4.2",
     "prop-types": "^15.7.2",
     "react": "16.12.0",
+    "react-adsense": "^0.1.0",
     "react-chartjs-2": "2.8.0",
     "react-copy-to-clipboard": "^5.0.2",
     "react-datepicker": "^2.10.1",
